# LD2410

./: LICENSE  README.md  example.py  pyproject.toml
LD2410/: __init__.py  ld2410.py  ld2410_consts.py
src/: example.py  ld2410.py
